failed to render the result from neo4j tool

--- a/tool_usage_graph.ipynb
+++ b/tool_usage_graph.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "cypher_tool_name = \"fetch_results\"\n",
-    "cypher_tool_description = \"Given a query, print the results in a tabular format with columns and rows\"\n",
+    "cypher_tool_description = \"Show results into a well-structured JSON\"\n",
     "cypher_tool_parameters = [\n",
     "    {\"name\": \"query\", \"type\": \"str\", \"description\": \"A cypher query for neo4j database\"},\n",
     "]  "
@@ -72,31 +72,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "MATCH (p:Person {name: \"Tom Hanks\"})-[:ACTED_IN]->(m:Movie)\n",
-      "RETURN m.title\n",
+      "MATCH (p:Person {name: 'Tom Hanks'})-[:ACTED_IN]->(m:Movie)\n",
+      "RETURN m.title AS Movie\n",
       "\n",
-      "\n",
-      "\n",
-      "The key steps:\n",
-      "1. Match the Person node with name \"Tom Hanks\"\n",
-      "2. Follow the ACTED_IN relationship from the Tom Hanks node to connected Movie nodes \n",
-      "3. Return the title property of those Movie nodes\n",
-      "\n",
-      "This will return all movies Tom Hanks has acted in based on the data in the Neo4j database.\n"
+      "{\"Movie\":{\"0\":\"You've Got Mail\",\"1\":\"Apollo 13\",\"2\":\"Joe Versus the Volcano\",\"3\":\"That Thing You Do\",\"4\":\"Cloud Atlas\",\"5\":\"The Da Vinci Code\",\"6\":\"Sleepless in Seattle\",\"7\":\"A League of Their Own\",\"8\":\"The Green Mile\",\"9\":\"Charlie Wilson's War\",\"10\":\"Cast Away\",\"11\":\"The Polar Express\"}}\n"
      ]
     }
    ],
    "source": [
-    "cyper_search_query = {\n",
-    "    \"role\": \"user\",\n",
-    "    \"content\": \"Movies by Tom Hanks\"\n",
-    "}\n",
-    "\n",
-    "messages = [cyper_search_query]\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Movies by Tom Hanks\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"Here is the result in the table format\"   \n",
+    "    }\n",
+    "]\n",
     "\n",
     "# Use Claude With the Provided Tools\n",
     "res = meta_tool_user.use_tools(messages, execution_mode='automatic')\n",
-    "print(res)"
+    "#print(res)"
    ]
   }
  ],
