--- a/tool_usage_graph.ipynb
+++ b/tool_usage_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -73,9 +73,9 @@
      "text": [
       "\n",
       "MATCH (p:Person {name: 'Tom Hanks'})-[:ACTED_IN]->(m:Movie)\n",
-      "RETURN m.title AS Movie\n",
+      "RETURN m.title AS movie\n",
       "\n",
-      "{\"Movie\":{\"0\":\"You've Got Mail\",\"1\":\"Apollo 13\",\"2\":\"Joe Versus the Volcano\",\"3\":\"That Thing You Do\",\"4\":\"Cloud Atlas\",\"5\":\"The Da Vinci Code\",\"6\":\"Sleepless in Seattle\",\"7\":\"A League of Their Own\",\"8\":\"The Green Mile\",\"9\":\"Charlie Wilson's War\",\"10\":\"Cast Away\",\"11\":\"The Polar Express\"}}\n"
+      "{\"movie\":{\"0\":\"You've Got Mail\",\"1\":\"Apollo 13\",\"2\":\"Joe Versus the Volcano\",\"3\":\"That Thing You Do\",\"4\":\"Cloud Atlas\",\"5\":\"The Da Vinci Code\",\"6\":\"Sleepless in Seattle\",\"7\":\"A League of Their Own\",\"8\":\"The Green Mile\",\"9\":\"Charlie Wilson's War\",\"10\":\"Cast Away\",\"11\":\"The Polar Express\"}}\n"
      ]
     }
    ],
@@ -94,6 +94,26 @@
     "# Use Claude With the Provided Tools\n",
     "res = meta_tool_user.use_tools(messages, execution_mode='automatic')\n",
     "#print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n\\nThe Cypher query matches the Person node with name 'Tom Hanks', follows the ACTED_IN relationship to the connected Movie nodes, and returns the title property of those Movie nodes aliased as 'movie'.\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
    ]
   }
  ],
